updated help html

--- a/app/src/main/assets/help.html
+++ b/app/src/main/assets/help.html
@@ -1,37 +1,52 @@
 <h1 style="color: #5e9ca0;">Smooth Weather</h1>
+<h1 style="color: #5e9ca0;">Welcome!</h1>
 <h2 style="color: #2e6c80;">How to use:</h2>
 <h2 style="color: #2e6c80;">Home Screen:</h2>
 <ul>
-    <li style="clear: both;">Click on the <span
+    <li style="clear: both;">Want to track the weather of a location? Its easy! Click on the <span
             style="background-color: #2b2301; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;"> +</span>
-        button to navigate to <b>Add Location Screen</b> and bookmark a new location.
+        button to navigate to <strong>Add Location Screen</strong> and bookmark a new location.
     </li>
-    <li style="clear: both;">Click on a location to navigate to <b>Weather Forecast Screen</b> and
-        view the weather forecast for the desired location.
+    <li style="clear: both;">All set! Click on a location to navigate to <strong>Weather Forecast
+        Screen</strong> and view the weather forecast for the desired location.
     </li>
-    <li style="clear: both;">Swipe a location on the right to remove it from your bookmarks. No
-        worries you can undo the action!
+    <li style="clear: both;">No longer want to track a location? Swipe a location on the right to
+        remove it from your bookmarks. No worries you can undo the action!
     </li>
-    <li style="clear: both;">Click on the <b>Settings</b> icon to navigate to <b>Settings Screen</b>
-        and to <b>Help Screen</b>. Great job being here means you found it !
+    <li style="clear: both;">Find your location fast by typing on the search filter and click the
+        search icon to find your location faster!
+    </li>
+    <li style="clear: both;">Click on the <strong>Settings</strong> icon to navigate to <strong>Settings
+        Screen</strong> and to <strong>Help Screen</strong>. Great job being here means you found it
+        !
     </li>
 </ul>
 <h2 style="color: #2e6c80;">Add Location Screen:</h2>
 <ul>
-    <li style="clear: both;">Find the location you want to bookmark by dropping the pin.</li>
+    <li style="clear: both;">Find the location you want to bookmark by dropping the pin on the
+        Map.
+    </li>
     <li style="clear: both;">Adjust the location name if you wish by typing a new name.</li>
     <li style="clear: both;">Click the<span
-            style="background-color: #2b2301; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">ν</span>
+            style="background-color: #2b2301; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">&nu;</span>
         button to add the location.
     </li>
 </ul>
 <h2 style="color: #2e6c80;">Weather Forecast Screen:</h2>
 <ul>
     <li style="clear: both;">Click the <span
-            style="background-color: #2b2301; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;"><    ></span>
+            style="background-color: #2b2301; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">&lt; &gt;</span>
         button to navigate the days and view the complete weather forecast. Hint: it is is easier if
         you swipe left and right!
     </li>
-    </span> </li>
-
 </ul>
+<h2 style="color: #2e6c80;">Settings Screen:</h2>
+<ul>
+    <li style="clear: both;">Swich between metric or imperial system.</li>
+    <li style="clear: both;">Are all your bookmarked locations useless by now? Delete them all at
+        once. Careful! There is not an undo option.
+    </li>
+</ul>
+
+<h2 style="color: #5e9ca0;">Have a great day!</h2>
+<h3 style="color: #5e9ca0;">(With great weather)</h3>
