fixed typos in the help html

--- a/app/src/main/assets/help.html
+++ b/app/src/main/assets/help.html
@@ -3,22 +3,21 @@
 <h2 style="color: #2e6c80;">How to use:</h2>
 <h2 style="color: #2e6c80;">Home Screen:</h2>
 <ul>
-    <li style="clear: both;">Want to track the weather of a location? Its easy! Click on the <span
-            style="background-color: #2b2301; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;"> +</span>
+    <li style="clear: both;">Want to track the weather of a new location? Its easy! Click on the
+        <span style="background-color: #2b2301; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;"> +</span>
         button to navigate to <strong>Add Location Screen</strong> and bookmark a new location.
     </li>
     <li style="clear: both;">All set! Click on a location to navigate to <strong>Weather Forecast
-        Screen</strong> and view the weather forecast for the desired location.
+        Screen</strong> and view it's weather forecast
     </li>
-    <li style="clear: both;">No longer want to track a location? Swipe a location on the right to
-        remove it from your bookmarks. No worries you can undo the action!
+    <li style="clear: both;">No longer want to track a location? Swipe left a location to remove it
+        from your bookmarks. No worries you can undo instantly!
     </li>
-    <li style="clear: both;">Find your location fast by typing on the search filter and click the
-        search icon to find your location faster!
+    <li style="clear: both;">Find your location fast by typing on the search filter. Click on the
+        search icon to apply the fitler!
     </li>
-    <li style="clear: both;">Click on the <strong>Settings</strong> icon to navigate to <strong>Settings
-        Screen</strong> and to <strong>Help Screen</strong>. Great job being here means you found it
-        !
+    <li style="clear: both;">Click on the <strong>Settings</strong> icon to navigate to the <strong>Settings
+        Screen</strong> and <strong>Help Screen</strong>. Being here means you already found it !
     </li>
 </ul>
 <h2 style="color: #2e6c80;">Add Location Screen:</h2>
@@ -29,7 +28,7 @@
     <li style="clear: both;">Adjust the location name if you wish by typing a new name.</li>
     <li style="clear: both;">Click the<span
             style="background-color: #2b2301; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">&nu;</span>
-        button to add the location.
+        button to complete and add the location.
     </li>
 </ul>
 <h2 style="color: #2e6c80;">Weather Forecast Screen:</h2>
@@ -42,11 +41,11 @@
 </ul>
 <h2 style="color: #2e6c80;">Settings Screen:</h2>
 <ul>
-    <li style="clear: both;">Swich between metric or imperial system.</li>
+    <li style="clear: both;">Swich between metric or imperial system with one click.</li>
     <li style="clear: both;">Are all your bookmarked locations useless by now? Delete them all at
         once. Careful! There is not an undo option.
     </li>
 </ul>
 
-<h2 style="color: #5e9ca0;">Have a great day!</h2>
+<h3 style="color: #5e9ca0;">Have a great day!</h3>
 <h3 style="color: #5e9ca0;">(With great weather)</h3>
