updated help html

--- a/app/src/main/assets/help.html
+++ b/app/src/main/assets/help.html
@@ -26,7 +26,7 @@
         Map.
     </li>
     <li style="clear: both;">Adjust the location name if you wish by typing a new name.</li>
-    <li style="clear: both;">Click the<span
+    <li style="clear: both;">Click the <span
             style="background-color: #2b2301; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">&nu;</span>
         button to complete and add the location.
     </li>
@@ -41,7 +41,7 @@
 </ul>
 <h2 style="color: #2e6c80;">Settings Screen:</h2>
 <ul>
-    <li style="clear: both;">Swich between metric or imperial system with one click.</li>
+    <li style="clear: both;">Switch between metric or imperial system with one click.</li>
     <li style="clear: both;">Are all your bookmarked locations useless by now? Delete them all at
         once. Careful! There is not an undo option.
     </li>
